Fix "Settings" button not showing up in the Main Menu

--- a/resourcepack/assets/lsr/lang/en_us.json
+++ b/resourcepack/assets/lsr/lang/en_us.json
@@ -20,7 +20,6 @@
     "lsr.boogeyman.punish.description.p4": "red",
     "lsr.menu.credits.title": "Credits",
     "lsr.menu.pack.title": "Life Series Recreation",
-    "lsr.menu.$(title_id).title": "",
     "lsr.menu.button.return_to_main_menu": "Return to Main Menu",
     "lsr.menu.button.start_game": "Start game",
     "lsr.menu.button.start_session": "Start session",
@@ -31,7 +30,7 @@
     "lsr.menu.button.play_game": "Play game",
     "lsr.menu.button.spectate_game": "Spectate game",
     "lsr.menu.button.operator_check": "Are you and operator?",
-    "lsr.menu.button.$(button_id)": "",
+    "lsr.menu.button.settings": "Settings",
     "lsr.setting.toggle.tooltip": "Click to toggle",
     "lsr.misc.last_life.p1": "You have dropped to your %S. All alliances are severed and you are now hostile to all players. You may team with others on their Last Life if you wish.",
     "lsr.misc.last_life.p2": "Last Life",
