--- a/resourcepack/assets/lsr/lang/en_us.json
+++ b/resourcepack/assets/lsr/lang/en_us.json
@@ -9,7 +9,7 @@
     "lsr.boogeyman.choose.the_boogeyman.description.p4": "red",
     "lsr.boogeyman.choose.the_boogeyman.description.p5": "If you don't get automatically cured when you perform a kill, please notify an operator.",
     "lsr.boogeyman.choose.not_the_boogeyman.title": "NOT the Boogeyman",
-    "lsr.boogeyman.choose.not_the_boogeyman.description.p1": "You are NOT the Boogeyman. The Boogeyman needs, by any means, lsr.kill a %1$s or %2$s name by direct action to be cured of the curse. All loyalties and friendships are removed while he/she is the Boogeyman. Beware of him/her!",
+    "lsr.boogeyman.choose.not_the_boogeyman.description.p1": "You are NOT the Boogeyman. The Boogeyman needs, by any means, lsr.kill a %1$s or %2$s name by direct action to be cured of the curse. All loyalties and friendships are removed while they are the Boogeyman. Beware of them!",
     "lsr.boogeyman.choose.not_the_boogeyman.description.p2": "green",
     "lsr.boogeyman.choose.not_the_boogeyman.description.p3": "yellow",
     "lsr.boogeyman.cure": "You are cured",
