--- a/resourcepack/assets/lsr/lang/en_us.json
+++ b/resourcepack/assets/lsr/lang/en_us.json
@@ -39,5 +39,6 @@
     "lsr.setting.force_gamemodes": "Force Gamemodes",
     "lsr.setting.apply_kill_buffs.red": "Apply kill buffs (red names)",
     "lsr.setting.apply_kill_buffs.boogeyman": "Apply kill buffs (Boogeymen)",
-    "lsr.misc.eliminated.title": "You have been eliminated"
+    "lsr.misc.eliminated.title": "You have been eliminated",
+    "lsr.boogeyman.cure.not_enough_players":"You have been cured, as there is no one for you to kill."
 }
