--- a/resourcepack/assets/lsr/lang/ca_es.json
+++ b/resourcepack/assets/lsr/lang/ca_es.json
@@ -39,5 +39,6 @@
     "lsr.setting.force_gamemodes": "Força modes de joc",
     "lsr.setting.apply_kill_buffs.red": "Aplica recompenses d'assassinat (noms vermells)",
     "lsr.setting.apply_kill_buffs.boogeyman": "Aplica recompenses d'assassinat (Boogeymen)",
-    "lsr.misc.eliminated.title": "Has estat eliminat"
+    "lsr.misc.eliminated.title": "Has estat eliminat",
+    "lsr.boogeyman.cure.not_enough_players": "Has estat curat/da, ja que no hi ha ningú que puguis matar."
 }
