--- a/resourcepack/assets/lsr/lang/es_es.json
+++ b/resourcepack/assets/lsr/lang/es_es.json
@@ -39,5 +39,6 @@
     "lsr.setting.force_gamemodes": "Forzar modos de juego",
     "lsr.setting.apply_kill_buffs.red": "Aplicar recompensas de muerte (nombres rojos)",
     "lsr.setting.apply_kill_buffs.boogeyman": "Aplicar recompensas de muerte (Boogeymen)",
-    "lsr.misc.eliminated.title": "Has sido eliminado/a"
+    "lsr.misc.eliminated.title": "Has sido eliminado/a",
+    "lsr.boogeyman.cure.not_enough_players": "Has sido curado/a, porque no quedan jugadores que puedas matar."
 }
