--- a/resourcepack/assets/lsr/lang/en_us.json
+++ b/resourcepack/assets/lsr/lang/en_us.json
@@ -40,5 +40,7 @@
     "lsr.setting.apply_kill_buffs.red": "Apply kill buffs (red names)",
     "lsr.setting.apply_kill_buffs.boogeyman": "Apply kill buffs (Boogeymen)",
     "lsr.misc.eliminated.title": "You have been eliminated",
-    "lsr.boogeyman.cure.not_enough_players": "You have been cured, as there is no one for you to kill."
+    "lsr.boogeyman.cure.not_enough_players": "You have been cured, as there is no one for you to kill.",
+    "lsr.menu.credits.developers.title": "Developers:",
+    "lsr.menu.credits.testers.title": "Testers:"
 }
