--- a/resourcepack/assets/lsr/lang/ca_es.json
+++ b/resourcepack/assets/lsr/lang/ca_es.json
@@ -41,7 +41,7 @@
     "lsr.setting.apply_kill_buffs.boogeyman": "Aplica recompenses d'assassinat (Boogeymen)",
     "lsr.misc.eliminated.title": "Has estat eliminat",
     "lsr.boogeyman.cure.not_enough_players": "Has estat curat/da, ja que no hi ha ningú que puguis matar.",
-    "lsr.menu.credits.developers.title": "Desenvolupadors:",
-    "lsr.menu.credits.testers.title": "Provadors:",
+    "lsr.menu.credits.developers.title": "Desenvolupadors",
+    "lsr.menu.credits.testers.title": "Provadors",
     "lsr.menu.button.stop_game": "Aturar el joc"
 }
