--- a/resourcepack/assets/lsr/lang/ca_es.json
+++ b/resourcepack/assets/lsr/lang/ca_es.json
@@ -43,5 +43,6 @@
     "lsr.boogeyman.cure.not_enough_players": "Has estat curat/da, ja que no hi ha ningú que puguis matar.",
     "lsr.menu.credits.developers.title": "Desenvolupadors",
     "lsr.menu.credits.testers.title": "Provadors",
-    "lsr.menu.button.stop_game": "Aturar el joc"
+    "lsr.menu.button.stop_game": "Aturar el joc",
+    "lsr.menu.credits.translators.title": "Traductors"
 }
