Update lol_us.json (POEditor.com)

--- a/resourcepack/assets/lsr/lang/lol_us.json
+++ b/resourcepack/assets/lsr/lang/lol_us.json
@@ -43,5 +43,6 @@
     "lsr.boogeyman.cure.not_enough_players": "U hav been curd, as ther is no one for u to kill",
     "lsr.menu.credits.developers.title": "Develapers (LOOK AT THIS U UNGRATEFUL F-)",
     "lsr.menu.credits.testers.title": "testars (yayy tyy)",
-    "lsr.menu.button.stop_game": "stop gaem (smh whyyy)"
+    "lsr.menu.button.stop_game": "stop gaem (smh whyyy)",
+    "lsr.menu.credits.translators.title": ""
 }
