--- a/resourcepack/assets/lsr/lang/es_es.json
+++ b/resourcepack/assets/lsr/lang/es_es.json
@@ -2,14 +2,14 @@
     "lsr.player_config.playing": "Participarás en el juego",
     "lsr.player_config.spectating": "Vas a ver el juego como espectador",
     "lsr.boogeyman.choose.windup": "Tú...",
-    "lsr.boogeyman.choose.the_boogeyman.title": "eres el Boogeyman",
-    "lsr.boogeyman.choose.the_boogeyman.description.p1": "Eres el Boogeyman. Debes matar a un nombre %1$s o %2$s de manera directa para ser curado/a de la maldición. Si no lo consigues, te convertirás en un nombre %3$s en la sesión siguiente. Todas alianzas y amistades se rompen mientras eres el Boogeyman.",
+    "lsr.boogeyman.choose.the_boogeyman.title": "eres el Coco",
+    "lsr.boogeyman.choose.the_boogeyman.description.p1": "Eres el Coco. Debes matar a un nombre %1$s o %2$s de manera directa para ser curado/a de la maldición. Si no lo consigues, te convertirás en un nombre %3$s en la sesión siguiente. Todas alianzas y amistades se rompen mientras eres el Coco.",
     "lsr.boogeyman.choose.the_boogeyman.description.p2": "verde",
     "lsr.boogeyman.choose.the_boogeyman.description.p3": "amarillo",
     "lsr.boogeyman.choose.the_boogeyman.description.p4": "rojo",
     "lsr.boogeyman.choose.the_boogeyman.description.p5": "Si no eres curado/a automáticamente, por favor, contacta un operador.",
-    "lsr.boogeyman.choose.not_the_boogeyman.title": "NO eres el Boogeyman",
-    "lsr.boogeyman.choose.not_the_boogeyman.description.p1": "NO eres el Boogeyman. El Boogeyman necesita matar un nombre %1$s o un nombre %2$s para ser curado/a de su maldición. Todas las alianzas y amistades no tienen efecto mientras se es el Boogeyman. ¡Cuidado con él/ella!",
+    "lsr.boogeyman.choose.not_the_boogeyman.title": "NO eres el Coco",
+    "lsr.boogeyman.choose.not_the_boogeyman.description.p1": "NO eres el Coco. El Coco necesita matar un nombre %1$s o un nombre %2$s para ser curado/a de su maldición. Todas las alianzas y amistades no tienen efecto mientras se es el Coco. ¡Cuidado con él/ella!",
     "lsr.boogeyman.choose.not_the_boogeyman.description.p2": "verde",
     "lsr.boogeyman.choose.not_the_boogeyman.description.p3": "amarillo",
     "lsr.boogeyman.cure": "Estás curado/a",
@@ -24,7 +24,7 @@
     "lsr.menu.button.start_game": "Comenzar juego",
     "lsr.menu.button.start_session": "Iniciar sesión",
     "lsr.menu.button.start_new_session": "Iniciar nueva sesión",
-    "lsr.menu.button.choose_boogeyman": "Escoger Boogeyman",
+    "lsr.menu.button.choose_boogeyman": "Escoger el Coco",
     "lsr.menu.button.credits": "Créditos",
     "lsr.menu.button.reset_all_settings": "Restaurar todas las opciones a valores por defecto",
     "lsr.menu.button.play_game": "Jugar",
@@ -38,7 +38,7 @@
     "lsr.util.check_operator_status.p2": "Ejecuta el comando %s para abrir el Menú Principal",
     "lsr.setting.force_gamemodes": "Forzar modos de juego",
     "lsr.setting.apply_kill_buffs.red": "Aplicar recompensas de muerte (nombres rojos)",
-    "lsr.setting.apply_kill_buffs.boogeyman": "Aplicar recompensas de muerte (Boogeymen)",
+    "lsr.setting.apply_kill_buffs.boogeyman": "Aplicar recompensas de muerte (El Coco)",
     "lsr.misc.eliminated.title": "Has sido eliminado/a",
     "lsr.boogeyman.cure.not_enough_players": "Has sido curado/a, porque no quedan jugadores que puedas matar.",
     "lsr.menu.credits.developers.title": "Desarrolladores",
